--- a/beacon/public/assets/css/admin/sidebar.css
+++ b/beacon/public/assets/css/admin/sidebar.css
@@ -22,11 +22,10 @@
 }
 
 .sidebar-header {
-    padding: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(223, 223, 223, 0.1);
     min-height: 60px;
 }
 
@@ -71,7 +70,7 @@
 
 .admin-sidebar.collapsed .sidebar-header {
     justify-content: center;
-    padding: 1.5rem 0.75rem;
+    padding: 0rem 0.75rem;
 }
 
 .admin-sidebar.collapsed .sidebar-logo {
@@ -88,7 +87,7 @@
 
 
 .sidebar-nav {
-    padding: 1rem 0;
+    padding: 0;
 }
 
 .nav-menu {
